modules/security/authz/config/allow-ui.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: allow-ui 
 namespace: default 
spec:
  action: ALLOW 
  rules:
  - from:
     - source:
         principals: ["cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"]
  - to:
     - operation:
         paths: ["*"]
         methods: ["GET"]
